--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,41 +1,12 @@
 {
     "editor.defaultFormatter": "esbenp.prettier-vscode",
     "editor.formatOnSaveMode": "file",
-    "editor.formatOnType": true,
-    "editor.formatOnPaste": true,
     "editor.formatOnSave": true,
     "editor.trimAutoWhitespace": true,
-    "eslint.validate": ["javascript", "typescript"],
     "editor.codeActionsOnSave": {
         "source.fixAll": true,
         "source.organizeImports": true
     },
 
-    "files.insertFinalNewline": true,
-    "files.eol": "\n",
-    "files.associations": {
-        "*.js": "javascript",
-        "*.ts": "typescript",
-        "*.json": "json",
-        "*.md": "markdown"
-    },
-    "files.exclude": {
-        "**/.git": true,
-        "**/.svn": true,
-        "**/.hg": true,
-        "**/CVS": true,
-        "**/.DS_Store": true,
-        "**/Thumbs.db": true,
-        "node_modules": true,
-        ".gitignore": true,
-        "package-lock.json": true,
-        "LICENSE": true
-    },
-
-    "cSpell.words": ["analyzer", "disqada", "github", "prerelease"],
-
-    "eslint.workingDirectories": [
-        { "pattern": "**/src/*" },
-        { "pattern": "**/tests/**" }
-    ]
+    "cSpell.words": ["analyzer", "disqada", "github", "prerelease"]
 }
