--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,6 +27,9 @@ jobs:
             - name: Install dependencies
               run: npm ci
 
+            - name: Format code
+              run: npm run format
+
             - name: Build
               run: npm run build --if-present
 
