--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,6 @@
-* text=auto eol=lf
+# Auto detect text files and perform LF normalization
+* text=auto
+
+# Denote all files that are truly binary and should not be modified.
+*.png binary
+*.jpg binary
