--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
         "noUnusedParameters": true,
         "strict": true,
         "alwaysStrict": true,
+        "strictNullChecks": true,
         "useUnknownInCatchVariables": true,
         "noUncheckedIndexedAccess": false,
 
@@ -26,20 +27,25 @@
         "newLine": "lf",
         "outDir": "dist",
         "declaration": true,
+        "declarationMap": true,
         "importHelpers": true,
+        "noEmitHelpers": true,
         "noEmitOnError": true,
-        "preserveConstEnums": true,
-        "removeComments": true,
+        "inlineSources": true,
+        "sourceMap": true,
+        "removeComments": false,
         "esModuleInterop": true,
+        "preserveConstEnums": true,
+        "importsNotUsedAsValues": "error",
         "forceConsistentCasingInFileNames": true,
 
         // Language and Environment
         "lib": ["ESNext"],
-        "target": "ES2021",
-        "emitDecoratorMetadata": true,
+        "target": "ESNext",
         "experimentalDecorators": true,
         "useDefineForClassFields": true
     },
 
+    "compileOnSave": true,
     "include": ["src"]
 }
