--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "main": "./dist/index.js",
     "types": "./dist/index.d.ts",
     "exports": {
-        "require": "./dist/index.js",
-        "types": "./dist/index.d.ts"
+        ".": {
+            "require": "./dist/index.js",
+            "import": "./dist/index.mjs",
+            "types": "./dist/index.d.ts"
+        }
     },
     "files": [
         "dist"
@@ -23,7 +26,7 @@
     "homepage": "https://github.com/DisQada/pathfinder",
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/DisQada/pathfinder.git"
+        "url": "https://github.com/DisQada/pathfinder.git"
     },
     "bugs": {
         "url": "https://github.com/DisQada/pathfinder/issues"
