--- a/package.json
+++ b/package.json
@@ -5,23 +5,27 @@
     "scripts": {
         "build": "tsc",
         "build:watch": "tsc -w",
-        "test": "vitest run",
-        "test:watch": "vitest",
-        "format": "eslint . --fix & prettier --write .",
+        "test": "cls & npm run build & vitest run",
+        "format": "prettier --write . & eslint . --fix",
         "commit": "git-cz",
         "semantic-release": "semantic-release"
     },
     "main": "./dist/index.js",
-    "types": "./dist/index.d.ts",
+    "module": "./dist/index.js",
+    "types": "./types/index.d.ts",
     "exports": {
         ".": {
+            "node": "./dist/index.js",
             "require": "./dist/index.js",
-            "import": "./dist/index.mjs",
-            "types": "./dist/index.d.ts"
+            "import": "./dist/index.js",
+            "types": "./types/index.d.ts",
+            "default": "./dist/index.js"
         }
     },
     "files": [
-        "dist"
+        "dist/**/*.js",
+        "types/**/*.d.ts",
+        "CHANGELOG.md"
     ],
     "homepage": "https://github.com/DisQada/pathfinder",
     "repository": {
