--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,7 @@
     "plugins": ["@typescript-eslint"],
     "ignorePatterns": ["**/dist/**", "**/types/**", "**/*.md"],
     "rules": {
-        "@typescript-eslint/no-inferrable-types": "off"
+        "@typescript-eslint/no-inferrable-types": "off",
+        "@typescript-eslint/ban-ts-comment": "off"
     }
 }
