--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,17 +1,31 @@
 {
+    "root": true,
     "env": {
-        "es2021": true,
+        "es6": true,
         "node": true
     },
-    "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
-    "parser": "@typescript-eslint/parser",
     "parserOptions": {
-        "ecmaVersion": "latest"
+        "ecmaVersion": "latest",
+        "sourceType": "module"
     },
-    "plugins": ["@typescript-eslint"],
-    "ignorePatterns": ["**/dist/**", "**/types/**", "**/*.md"],
+    "extends": ["eslint:recommended", "plugin:jsdoc/recommended-error"],
+    "plugins": ["jsdoc"],
+    "ignorePatterns": ["**/node_modules/**", "**/types/**", "**/*.md"],
     "rules": {
-        "@typescript-eslint/no-inferrable-types": "off",
-        "@typescript-eslint/ban-ts-comment": "off"
+        "jsdoc/check-indentation": "warn",
+        "jsdoc/check-line-alignment": "warn",
+        "jsdoc/check-syntax": "warn",
+        "jsdoc/informative-docs": "warn",
+        "jsdoc/no-bad-blocks": "warn",
+        "jsdoc/no-blank-block-descriptions": "warn",
+        "jsdoc/no-undefined-types": "error",
+        "jsdoc/require-asterisk-prefix": "error",
+        "jsdoc/require-description": "error",
+        "jsdoc/require-description-complete-sentence": "error",
+        "jsdoc/require-example": "error",
+        "jsdoc/require-file-overview": "error",
+        "jsdoc/require-hyphen-before-param-description": "error",
+        "jsdoc/require-throws": "error",
+        "jsdoc/sort-tags": "warn"
     }
 }
