--- a/package.json
+++ b/package.json
@@ -57,10 +57,11 @@
         "@semantic-release/changelog": "^6.0.3",
         "@semantic-release/git": "^10.0.1",
         "@types/node": "^18.15.11",
-        "@vitest/coverage-c8": "^0.29.8",
         "commitizen": "^4.3.0",
         "cz-conventional-changelog": "^3.3.0",
         "eslint": "^8.39.0",
+        "eslint-plugin-jest": "^27.2.3",
+        "eslint-plugin-jsdoc": "^46.4.6",
         "jest": "^29.6.2",
         "jsdoc": "^4.0.2",
         "prettier": "^2.8.8",
