--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,5 @@
         "source.organizeImports": true
     },
 
-    "javascript.implicitProjectConfig.checkJS": true
-    // can add @ts-check on the top of a file
+    "js/ts.implicitProjectConfig.checkJs": true
 }
