--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
     "include": ["src"],
     "exclude": ["types"],
     "compilerOptions": {
+        "checkJs": true,
         "allowJs": true,
 
         // Modules
