--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
     "description": "Easily find files in chosen directories in your project",
     "scripts": {
         "build": "tsc",
-        "build:watch": "tsc -w",
         "test": "jest",
         "doc": "jsdoc -c jsdoc.json",
-        "format": "prettier . --write & eslint . --fix",
+        "format": "prettier . --write",
+        "lint": "eslint . --fix",
         "commit": "git-cz",
         "semantic-release": "semantic-release"
     },
@@ -61,6 +61,7 @@
         "cz-conventional-changelog": "^3.3.0",
         "eslint": "^8.39.0",
         "eslint-plugin-jest": "^27.2.3",
+        "eslint-plugin-jsdoc": "^46.5.0",
         "jest": "^29.6.2",
         "jsdoc": "^4.0.2",
         "prettier": "^2.8.8",
