--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
         "@types/node": "^18.15.11",
         "commitizen": "^4.3.0",
         "cz-conventional-changelog": "^3.3.0",
+        "docdash": "^2.0.2",
         "eslint": "^8.39.0",
         "eslint-plugin-jest": "^27.2.3",
         "eslint-plugin-jsdoc": "^46.5.0",
