ci(test): add formatting to test workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,5 +33,8 @@ jobs:
             - name: Lint code
               run: npm run lint --if-present
 
+            - name: Format code
+              run: npm run format --if-present
+
             - name: Test code
               run: npm test
