--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,33 +1,52 @@
-name: Generate documentation
+name: Generate and Deploy documentation
 
 on:
     release:
         types: [published]
+    workflow_dispatch:
+
+permissions:
+    contents: read
+    pages: write
+    id-token: write
+
+concurrency:
+    group: "pages"
+    cancel-in-progress: false
 
 jobs:
     deploy:
+        environment:
+            name: github-pages
+            url: ${{ steps.deployment.outputs.page_url }}
         runs-on: ubuntu-latest
-        permissions:
-            contents: write
-        concurrency:
-            group: ${{ github.workflow }}-${{ github.ref }}
         steps:
-            - name: Checkout code
+            - name: Checkout
               uses: actions/checkout@v3
+
+            - name: Setup Node.js
+              uses: actions/setup-node@v3
               with:
-                  fetch-depth: 0
+                  node-version: "lts/*"
+                  registry-url: https://registry.npmjs.org
+
+            - name: Install dependencies
+              run: npm ci
 
             - name: Build
-              uses: andstor/jsdoc-action@v1
-              with:
-                  source_dir: ./src
-                  output_dir: ./docs
-                  config_file: jsdoc.json
-                  template: minami
-                  front_page: README.md
+              run: npm run build --if-present
 
-            - name: Deploy
-              uses: peaceiris/actions-gh-pages@v3
+            - name: Generate site
+              run: npm run doc
+
+            - name: Setup Pages
+              uses: actions/configure-pages@v3
+
+            - name: Upload artifact
+              uses: actions/upload-pages-artifact@v2
               with:
-                  github_token: ${{ secrets.GITHUB_TOKEN }}
-                  publish_dir: ./docs
+                  path: "./docs"
+
+            - name: Deploy to GitHub Pages
+              id: deployment
+              uses: actions/deploy-pages@v2
