--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
         "src/",
         "CHANGELOG.md"
     ],
-    "homepage": "https://github.com/DisQada/pathfinder",
+    "homepage": "https://disqada.github.io/pathfinder",
     "repository": {
         "type": "git",
         "url": "https://github.com/DisQada/pathfinder.git"
