chore: Update VS Code & GitHub files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,17 @@
 {
     "editor.defaultFormatter": "esbenp.prettier-vscode",
     "editor.formatOnSaveMode": "file",
+    "editor.formatOnPaste": true,
+    "editor.formatOnType": true,
     "editor.formatOnSave": true,
     "editor.trimAutoWhitespace": true,
     "editor.codeActionsOnSave": {
         "source.fixAll": true,
         "source.organizeImports": true
     },
+
+    "files.insertFinalNewline": true,
+    "files.eol": "auto",
 
     "javascript.suggest.jsdoc.generateReturns": true,
     "javascript.suggest.completeJSDocs": true
