--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -2,7 +2,7 @@ name: Generate and Deploy documentation
 
 on:
     release:
-        types: [published]
+        types: [released, published]
     workflow_dispatch:
 
 permissions:
@@ -36,7 +36,7 @@ jobs:
             - name: Build
               run: npm run build --if-present
 
-            - name: Generate site
+            - name: Generate Documentation
               run: npm run doc
 
             - name: Setup Pages
