--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,6 +33,12 @@ jobs:
             - name: Build
               run: npm run build --if-present
 
+            - name: Lint code
+              run: npm run lint --if-present
+
+            - name: Format code
+              run: npm run format --if-present
+
             - name: Release
               run: npm run semantic-release
               env:
