--- a/jest.config.json
+++ b/jest.config.json
@@ -2,6 +2,6 @@
     "bail": false,
     "verbose": true,
     "collectCoverage": true,
-    "collectCoverageFrom": ["src/**/*.js", "!**/exports.*"],
+    "collectCoverageFrom": ["src/**/*.js", "!**/interface/*", "!**/exports.*"],
     "coverageReporters": [["text", { "skipFull": true }]]
 }
