--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -33,8 +33,11 @@ jobs:
             - name: Install dependencies
               run: npm ci
 
+            - name: Config
+              run: npm run config
+
             - name: Build
-              run: npm run build --if-present
+              run: npm run build
 
             - name: Generate Documentation
               run: npm run doc
