--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,14 +30,17 @@ jobs:
             - name: Format code
               run: npm run format
 
+            - name: Config
+              run: npm run config
+
             - name: Build
-              run: npm run build --if-present
+              run: npm run build
 
             - name: Lint code
-              run: npm run lint --if-present
+              run: npm run lint
 
             - name: Format code
-              run: npm run format --if-present
+              run: npm run format
 
             - name: Release
               run: npm run semantic-release
