--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,10 +28,10 @@ jobs:
               run: npm ci
 
             - name: Lint code
-              run: npm run lint --if-present
+              run: npm run lint
 
             - name: Format code
-              run: npm run format --if-present
+              run: npm run format
 
             - name: Test code
               run: npm test
