--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,20 +27,14 @@ jobs:
             - name: Install dependencies
               run: npm ci && npm i -D semantic-release @semantic-release/changelog @semantic-release/git
 
-            - name: Format code
-              run: npm run format
-
             - name: Config
-              run: npm run config
+              run: npm explore @disqada/typedoc -- npm run config
 
             - name: Build
-              run: npm run build
+              run: npm explore @disqada/typedoc -- npm run build
 
-            - name: Lint code
-              run: npm run lint
-
-            - name: Format code
-              run: npm run format
+            - name: Clean types
+              run: npm explore @disqada/typedoc -- npm run clean
 
             - name: Release
               run: npm run semantic-release
