--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "description": "Easily find files in chosen directories in your project",
     "scripts": {
         "config": "npm explore @disqada/typedoc -- npm run config",
-        "build": "npm explore @disqada/typedoc -- npm run build",
-        "doc": "npm explore @disqada/typedoc -- npm run doc",
+        "types": "npm explore @disqada/typedoc -- npm run types",
+        "docs": "npm explore @disqada/typedoc -- npm run docs",
         "lint": "eslint . --fix",
         "format": "prettier . --write",
         "test": "jest",
@@ -58,7 +58,7 @@
     },
     "license": "Apache-2.0",
     "devDependencies": {
-        "@disqada/typedoc": "^1.0.3",
+        "@disqada/typedoc": "^1.2.0",
         "@types/jest": "^29.5.10",
         "commitizen": "^4.3.0",
         "cz-conventional-changelog": "^3.3.0",
