--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
         "docs": "npm explore @disqada/typedoc -- npm run docs",
         "lint": "eslint . --fix",
         "format": "prettier . --write",
-        "test": "jest",
-        "commit": "git-cz",
-        "semantic-release": "semantic-release"
+        "test": "npx jest"
     },
     "type": "commonjs",
     "main": "./src/exports.js",
@@ -69,10 +67,5 @@
     },
     "publishConfig": {
         "access": "public"
-    },
-    "config": {
-        "commitizen": {
-            "path": "./node_modules/cz-conventional-changelog"
-        }
     }
 }
