style: Update linters
- Remove specific ignore files and use .gitignore
- Remove markdownlint config file
- Identify linters config files as json
- Update eslint and prettier

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
         "config": "npm explore @disqada/typedoc -- npm run config",
         "types": "npm explore @disqada/typedoc -- npm run types",
         "docs": "npm explore @disqada/typedoc -- npm run docs",
-        "lint": "eslint . --fix",
-        "format": "prettier . --write",
+        "lint": "eslint . --fix --ignore-path .gitignore",
+        "format": "prettier . --write --ignore-path .gitignore",
         "test": "npx jest"
     },
     "type": "commonjs",
