--- a/package.json
+++ b/package.json
@@ -13,15 +13,12 @@
     },
     "type": "commonjs",
     "main": "./src/exports.js",
-    "module": "./src/exports.js",
     "types": "./types/exports.d.ts",
     "exports": {
         ".": {
-            "node": "./src/exports.js",
             "require": "./src/exports.js",
-            "import": "./src/exports.js",
-            "types": "./types/exports.d.ts",
-            "default": "./src/exports.js"
+            "default": "./src/exports.js",
+            "types": "./types/exports.d.ts"
         }
     },
     "files": [
@@ -41,13 +38,13 @@
     },
     "keywords": [
         "find",
+        "finder",
         "search",
         "path",
         "paths",
         "directory",
         "folder",
-        "file",
-        "finder"
+        "file"
     ],
     "author": {
         "name": "The Alpha",
@@ -64,8 +61,5 @@
         "eslint-plugin-jsdoc": "*",
         "eslint-plugin-promise": "*",
         "prettier": "*"
-    },
-    "publishConfig": {
-        "access": "public"
     }
 }
