--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -33,17 +33,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Config
-        run: npm explore @disqada/typedoc -- npm run config
-
-      - name: Generate types
-        run: npm explore @disqada/typedoc -- npm run types
-
-      - name: Clean types
-        run: npm explore @disqada/typedoc -- npm run clean
-
       - name: Generate docs
-        run: npm explore @disqada/typedoc -- npm run docs
+        run: npm run docs
 
       - name: Setup Pages
         uses: actions/configure-pages@v3
