--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,14 +27,8 @@ jobs:
       - name: Install dependencies
         run: npm ci && npm i --no-save @semantic-release/changelog @semantic-release/git
 
-      - name: Config
-        run: npm explore @disqada/typedoc -- npm run config
-
       - name: Generate types
-        run: npm explore @disqada/typedoc -- npm run types
-
-      - name: Clean types
-        run: npm explore @disqada/typedoc -- npm run clean
+        run: npm run types
 
       - name: Release
         run: npx semantic-release
