--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "version": "3.0.0",
   "description": "Easily find files in chosen directories in your project",
   "scripts": {
-    "prepack": "npm run types && npm run format",
     "types": "workspace ./workspace.json -c -t",
     "docs": "workspace ./workspace.json -c -t -d",
     "format": "prettier . --write --ignore-path .gitignore",
@@ -27,10 +26,7 @@
     "*.md"
   ],
   "homepage": "https://disqada.github.io/PathFinder",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/DisQada/PathFinder.git"
-  },
+  "repository": "github:DisQada/PathFinder",
   "bugs": {
     "url": "https://github.com/DisQada/PathFinder/issues"
   },
@@ -47,8 +43,8 @@
   "author": "DisQada <hi@disqada.org> (https://links.disqada.org)",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@disqada/workspace": "^1.6.1",
-    "@types/node": "^22.5.2",
+    "@disqada/workspace": "^1.6.2",
+    "@types/node": "^22.5.5",
     "mocha": "^10.7.3",
     "prettier": "^3.3.3"
   }
